# bitap-simd

./: README.md  main.cpp
bitap_pure_cpp/: BitapAlgo.cpp  BitapSearch.cpp  BitapSearch.h  CMakeLists.txt
neon/: CMakeLists.txt  bitap_simd.S  bitap_simd.s  main.cpp  toolchain-arm.cmake
pure_cpp/: BitapAlgo.cpp  BitapSearch.cpp  BitapSearch.h  CMakeLists.txt
